--- a/report/main.qmd
+++ b/report/main.qmd
@@ -1,5 +1,5 @@
 ---
-title: "**STAT550 Homework No 2: Advise for Evaluating Interventions on Sugary and Zero-Calorie Beverage Consumption**"
+title: "**STAT550 Homework No 2: Advice for Evaluating Interventions on Sugary and Zero-Calorie Beverage Consumption**"
 author: Son Luu (71843379), Xihan Qian (54285556) and Javier Mtz.-Rdz. (94785938)
 pdf-engine: pdflatex
 date: "March 1, 2024"
@@ -39,7 +39,7 @@ bibliography: ../reference/ref.bib
 ```
 # Introduction
 
-Zero-calorie beverages offer an alternative to sugary drinks that can help to avoid the harmful effects of artificial sweeteners. Therefore, it is important to understand what actions can motivate people to switch to these products. The aim of this study is to assess the impact of messaging and discounts on the buying behaviour of zero-calorie and sugary drinks. In this regard, the statistical advise recommends to indicate how to solve four questions. The first question to be addressed is whether these interventions lead to increased consumption of zero-calorie beverages and decreased consumption of sugary beverages. Subsequently, the study will also investigate whether the effects vary across different sites (second question), and whether combining interventions —messaging + discount and both messages— results in larger effects (third question). Lastly, the study will compare the effectiveness of calorie-equivalent messaging with simple calorie admonishment (fourth question).
+Zero-calorie beverages offer an alternative to sugary drinks that can help to avoid the harmful effects of artificial sweeteners. Therefore, it is important to understand what actions can motivate people to switch to these products. his study aims to assess the impact of messaging and discounts on the buying behaviour of zero-calorie and sugary drinks. In this regard, the statistical advice recommends to indicate how to solve four questions. The first question to be addressed is whether these interventions lead to increased consumption of zero-calorie beverages and decreased consumption of sugary beverages. Subsequently, the study will also investigate whether the effects vary across different sites (second question) and whether combining interventions results in larger effects (third question). Lastly, the study will compare the effectiveness of calorie-equivalent messaging with simple calorie admonishment (fourth question).
 
 # Data Description and Summaries
 
@@ -75,15 +75,15 @@ In particular, @fig-1 shows some important characteristics of the dataset. First
 
 ## Pre-analysis
 
-Before conducting the statistical analysis, it is important to address some elements that were identified during the Exploratory Analysis that could potentially impact our analysis. These include the weekly effect, different lengths of the pre-intervention observations, and unnecessary information. Firstly, we aim to capture the intervention effects and not the number of day's effects. Therefore, we can remove the weekly impact by either using a percentage of sales or decomposing the time series, as identified in the Exploratory Analysis, and removing the seasonal variation as indicated by @ChatfieldXing:2019. While the percentage approach may be easier, it is recommended to use the decomposition method as the variable containing the total items sold may have inconsistencies that suggest unreliable information. For example, day 199 in the NS site has more zero-calorie and sugary beverages sold than total items, and days 50-53, 107, 184, and 196 in the NS site have decimals.
+Before conducting the statistical analysis, it is important to address some elements that were identified during the Exploratory Analysis that could impact our analysis. These include the weekly effect, different lengths of the pre-intervention observations, and unnecessary information. Firstly, we aim to capture the intervention effects and not the number of day's effects. Therefore, we can remove the weekly impact by either using a percentage of sales or decomposing the time series, as identified in the Exploratory Analysis, and removing the seasonal variation as indicated by @ChatfieldXing:2019. While the percentage approach may be easier, it is recommended to use the decomposition method as the variable containing the total items sold may have inconsistencies that suggest unreliable information. For example, day 199 in the NS site has more zero-calorie and sugary beverages sold than total items, and days 50-53, 107, 184, and 196 in the NS site have decimals.
 
 Secondly, as sites two and three have a short pre-intervention period, it is necessary to compensate for the missing information. This can be done by combining the follow-up and pre-intervention categories into a new category that will serve as the baseline for the study. Lastly, we are not interested in the washout periods that are used to reduce the effects of previous interventions. Hence, this data can be ignored in the study.
 
 ## ANOVA/ANCOVA
 
-ANOVA (Analysis of Variance) is a statistical method used to compare the means of three or more samples, determining if at least one sample mean significantly differs from the others. It's instrumental in experiments aimed at evaluating the effectiveness of different interventions, in this study to encourage the selection of zero-calorie beverages over sugary options in hospital settings. By examining the variance within and between intervention groups, ANOVA facilitates understanding whether observed differences in beverage consumption are attributable to the interventions or occur by chance.
+ANOVA (Analysis of Variance) is a statistical method used to compare the means of three or more samples, determining if at least one sample mean significantly differs from the others. It's instrumental in experiments aimed at evaluating the effectiveness of different interventions. In this study, it is used to encourage the selection of zero-calorie beverages over sugary options in hospital settings. By examining the variance within and between intervention groups, ANOVA facilitates understanding whether observed differences in beverage consumption are attributable to the interventions or occur by chance.
 
-However, ANOVA's limitation lies in its inability to account for external variables that could influence outcomes, such as baseline consumption patterns or hospital site characteristics. Despite this, ANOVA remains valuable for initial analysis, with its limitations highlighting the need for a comprehensive approach, possibly incorporating ANCOVA, to fully understand the interventions' impacts on beverage selection.
+However, ANOVA's limitation lies in its inability to account for external variables that could influence outcomes, such as baseline consumption patterns or hospital site characteristics. Despite this, ANOVA remains valuable for initial analysis, with its limitations highlighting the need for a comprehensive approach, possibly incorporating ANCOVA, to fully understand the interventions’ impacts on beverage selection.
 
 ## Linear mixed effect model
 
@@ -91,9 +91,19 @@ Linear Mixed Effects (LME) model is a statistical model that accounts for fixed 
 
 ## Recommendation
 
-For the first and second question, we recommend using the following ANOVA model $$\text{Sales} = \beta_0+\beta_1\times\text{Intervention}+\beta_2\times\text{Site}$$ with the pre-intervention period being the reference. For the third question, we recommend using the following ANOVA model $$\text{Sales} = \beta_0+\beta_1\times\text{Calorie } +\beta_2\times\text{Exercise}$$ with the combination period being the reference. If the interest is also the effect of combining discount and messaging then following model is recommended $$\text{Sales} = \beta_0+\beta_1\times\text{Discount }$$ with the discount plus messaging as the reference. For the final question, we recommend using the following ANOVA model $$\text{Sales} = \beta_0+\beta_1\times\text{Calorie}$$ with the calorie admonishment period being the reference. In the model for the second question, we recommend to first run a preliminary ANOVA for each of the intervention and the pre-intervention period. If there are any significant differences between the estimated coefficients between the interventions, a LME model with intervention dependent random effects is recommended. A similar strategy needs to be applied to the other questions, but the preliminary ANOVA is performed for each site and site dependent random effects is added when differences are significant instead. The reason for these preliminary analyses is to determine if LME is necessary or not. Note that the sales in these model refer to the trend extracted in the EDA step. After the models are fitted, the residuals need to be visualized via scatter plot, autocorrelation plot and QQ-plot to confirm the independent, equal variance and normal error assumptions for both ANOVA and LME.
+For the first and second questions, we recommend using the following ANOVA model 
+$$\text{Sales} = \beta_0+\beta_1\times\text{Intervention}+\beta_2\times\text{Site}$$ 
+with the pre-intervention period being the reference. For the third question, we recommend using the following ANOVA model 
+$$\text{Sales} = \beta_0+\beta_1\times\text{Calorie } +\beta_2\times\text{Exercise}$$
+with the combination period being the reference. If the interest is also the effect of combining discount and messaging then the following model is recommended 
+$$\text{Sales} = \beta_0+\beta_1\times\text{Discount }$$ 
+with the discount plus messaging as the reference. For the final question, we recommend using the following ANOVA model 
+$$\text{Sales} = \beta_0+\beta_1\times\text{Calorie}$$
+with the calorie admonishment period being the reference. 
 
-If the sales trends are found to be linear for each intervention period, the time coviariate can be added to the models above, turning them into ANCOVA models. In this case, only the pre-intervention period before the third intervention should be kept for the analysis as the time covariate needs to be reset for each intervention period as well as the pre-intervention period.
+In the model for the second question, we recommend first running a preliminary ANOVA for each of the interventions and the pre-intervention period. If there are any significant differences between the estimated coefficients between the interventions, a LME model with intervention-dependent random effects is recommended. A similar strategy needs to be applied to the other questions. Still, the preliminary ANOVA is performed for each site and site-dependent random effects are added when differences are significant instead. The reason for these preliminary analyses is to determine if LME is necessary or not. Note that the sales in these model refer to the trend extracted in the Pre-analysis step. After the models are fitted, the residuals need to be visualized via scatter plot, autocorrelation plot and QQ-plot to confirm the independent, equal variance and normal error assumptions for both ANOVA and LME.
+
+If the sales trends are found to be linear for each intervention period, the time covariate can be added to the models above, turning them into ANCOVA models. In this case, only the pre-intervention period before the third intervention should be kept for the analysis as the time covariate needs to be reset for each intervention period as well as the pre-intervention period.
 
 # Conclusion
 
